Fixes left padding on mobile

--- a/app/assets/stylesheets/global_1px.css.scss
+++ b/app/assets/stylesheets/global_1px.css.scss
@@ -27,6 +27,10 @@ ul {
   counter-reset: my-awesome-counter;
 }
 
+.buffer {
+  padding: 30px;
+}
+
 li {
   margin-left: 10px;
   padding: 0 0 25px 0;
